--- a/pages/11208.html
+++ b/pages/11208.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5716/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -610,7 +609,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The idea of <em>realizability</em> is a way of making the <a class='existingWikiWord' href='/nlab/show/Brouwer-Heyting-Kolmogorov+interpretation'>Brouwer-Heyting-Kolmogorov interpretation</a> of <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructivism</a> and <a class='existingWikiWord' href='/nlab/show/intuitionistic+mathematics'>intuitionistic mathematics</a> precise. It is related to the <a class='existingWikiWord' href='/nlab/show/propositions+as+types'>propositions as types</a> paradigm. For instance, constructively a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of an <a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential quantification</a> <math class='maruku-mathml' display='inline' id='mathml_eb6d444fafdbbfd6654117e2d92f656a09456ec4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo>∃</mo><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow></munder><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\underset{x\in X}{\exists} \phi(x)</annotation></semantics></math> consists of constructing a specific <math class='maruku-mathml' display='inline' id='mathml_eb6d444fafdbbfd6654117e2d92f656a09456ec4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>x \in X</annotation></semantics></math> and a proof of <math class='maruku-mathml' display='inline' id='mathml_eb6d444fafdbbfd6654117e2d92f656a09456ec4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\phi(x)</annotation></semantics></math>, which “realizes” the <a class='existingWikiWord' href='/nlab/show/true+proposition'>truth</a> of the statement, whence the name (see e.g. <a href='#Streicher07'>Streicher 07, section 1</a>, <a href='#Vermeeren09'>Vermeeren 09, section 1</a> for introductions to the rough idea, or <a href='#Bauer05'>Bauer 05, page 12 and def. 4.7</a> for an actual definition).</p>
+<p>The idea of <em>realizability</em> is a way of making the <a class='existingWikiWord' href='/nlab/show/Brouwer-Heyting-Kolmogorov+interpretation'>Brouwer-Heyting-Kolmogorov interpretation</a> of <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructivism</a> and <a class='existingWikiWord' href='/nlab/show/intuitionistic+mathematics'>intuitionistic mathematics</a> precise. It is related to the <a class='existingWikiWord' href='/nlab/show/propositions+as+types'>propositions as types</a> paradigm. For instance, constructively a <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> of an <a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential quantification</a> <math class='maruku-mathml' display='inline' id='mathml_72979ad9e87c8d9e27bfceedc4db56970cbe1d35_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo>∃</mo><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow></munder><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\underset{x\in X}{\exists} \phi(x)</annotation></semantics></math> consists of constructing a specific <math class='maruku-mathml' display='inline' id='mathml_72979ad9e87c8d9e27bfceedc4db56970cbe1d35_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>x \in X</annotation></semantics></math> and a proof of <math class='maruku-mathml' display='inline' id='mathml_72979ad9e87c8d9e27bfceedc4db56970cbe1d35_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\phi(x)</annotation></semantics></math>, which “realizes” the <a class='existingWikiWord' href='/nlab/show/true+proposition'>truth</a> of the statement, whence the name (see e.g. <a href='#Streicher07'>Streicher 07, section 1</a>, <a href='#Vermeeren09'>Vermeeren 09, section 1</a> for introductions to the rough idea, or <a href='#Bauer05'>Bauer 05, page 12 and def. 4.7</a> for an actual definition).</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -633,7 +632,7 @@ margin-left: 0em;
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/computability'>computability</a></strong></p>
-<table><thead><tr><th></th><th>type I computability</th><th>type II computability</th></tr></thead><tbody><tr><td style='text-align: left;'>typical domain</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a> <math class='maruku-mathml' display='inline' id='mathml_eb6d444fafdbbfd6654117e2d92f656a09456ec4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Baire+space+of+sequences'>Baire space</a> of infinite sequences <math class='maruku-mathml' display='inline' id='mathml_eb6d444fafdbbfd6654117e2d92f656a09456ec4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔹</mi><mo>=</mo><msup><mi>ℕ</mi> <mi>ℕ</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{B} = \mathbb{N}^{\mathbb{N}}</annotation></semantics></math></td></tr>
+<table><thead><tr><th></th><th>type I computability</th><th>type II computability</th></tr></thead><tbody><tr><td style='text-align: left;'>typical domain</td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a> <math class='maruku-mathml' display='inline' id='mathml_72979ad9e87c8d9e27bfceedc4db56970cbe1d35_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Baire+space+of+sequences'>Baire space</a> of infinite sequences <math class='maruku-mathml' display='inline' id='mathml_72979ad9e87c8d9e27bfceedc4db56970cbe1d35_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔹</mi><mo>=</mo><msup><mi>ℕ</mi> <mi>ℕ</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{B} = \mathbb{N}^{\mathbb{N}}</annotation></semantics></math></td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+function'>computable functions</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/partial+recursive+function'>partial recursive function</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+function+%28analysis%29'>computable function (analysis)</a></td></tr>
 <tr><td style='text-align: left;'>type of <a class='existingWikiWord' href='/nlab/show/computability'>computable mathematics</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/recursive+mathematics'>recursive mathematics</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/computable+analysis'>computable analysis</a>, <a class='existingWikiWord' href='/nlab/show/Type+Two+Theory+of+Effectivity'>Type Two Theory of Effectivity</a></td></tr>
 <tr><td style='text-align: left;'>type of <a class='existingWikiWord' href='/nlab/show/realizability'>realizability</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/number+realizability'>number realizability</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/function+realizability'>function realizability</a></td></tr>
@@ -650,7 +649,7 @@ margin-left: 0em;
 <p>A historical survey of realizability (including <a class='existingWikiWord' href='/nlab/show/realizability+topos'>categorical realizability</a>) is in</p>
 
 <ul>
-<li id='vanOosten00'><a class='existingWikiWord' href='/nlab/show/Jaap+van+Oosten'>Jaap van Oosten</a>, <em>Realizability: An Historical Essay</em>, 2000 (<a href='http://www.staff.science.uu.nl/~ooste110/realizability/history.ps.gz'>link</a>)</li>
+<li id='vanOosten00'><a class='existingWikiWord' href='/nlab/show/Jaap+van+Oosten'>Jaap van Oosten</a>, <em>Realizability: An Historical Essay</em>, 2000 (<a href='http://www.staff.science.uu.nl/~ooste110/realizability/history.ps.gz'>link</a>, <a href='https://pdfs.semanticscholar.org/0eb4/60525d1580fb9f184b43b974499bce2a2ea7.pdf'>pdf</a>)</li>
 </ul>
 
 <p>A quick survey is in</p>
@@ -713,19 +712,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 22, 2017 10:43:27 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  <p>
+  Last revised on July  9, 2018 at 06:57:07.
+  See the <a href="https://ncatlab.org/nlab/history/realizability" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/realizability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/realizability/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/realizability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/realizability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/realizability" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/realizability/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/realizability" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/realizability" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/realizability/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/realizability" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/realizability" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/realizability" id="view_source" rel="nofollow">Source</a>
