--- a/pages/8335.html
+++ b/pages/8335.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -769,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -928,16 +929,24 @@ margin-left: 0em;
 
 <h3 id='general'>General</h3>
 
+<p>Lecture notes includes</p>
+
 <ul>
-<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Cosmic_microwave_background_radiation'>Cosmic microwave backround radiation</a></em></li>
+<li>Daniel Baumann, from section 3 on in <em>TASI Lectures on Primordial Cosmology</em> (<a href='https://arxiv.org/abs/1807.03098'>arXiv:1807.03098</a>)</li>
 </ul>
 
 <p>See also the references at <em><a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>cosmic inflation</a></em>.</p>
 
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Cosmic_microwave_background_radiation'>Cosmic microwave backround radiation</a></em></li>
+</ul>
+
 <h3 id='on_the_hydron_line'>On the hydron line</h3>
 
 <ul>
-<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_0e8d3c9107573955b8a7d8a6441c4f0ecfd415e3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
+<li id='HiganRees79'>C. J. Hogan, <a class='existingWikiWord' href='/nlab/show/Martin+Rees'>Martin Rees</a>, <em>Spectral appearance of non-uniform gas at high <math class='maruku-mathml' display='inline' id='mathml_11119ceabfe9b4ee4f319027a23f2a32f5ba58bc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>z</mi></mrow><annotation encoding='application/x-tex'>z</annotation></semantics></math></em>, Monthly Notices of the Royal Astronomical Society, Volume 188, Issue 4, 1 October 1979, Pages 791–798 (<a href='https://doi.org/10.1093/mnras/188.4.791'>doi:10.1093/mnras/188.4.791</a>)</li>
 </ul>
 
 <p>A claim of detection of the cosmological signal by the <a class='existingWikiWord' href='/nlab/show/EDGES'>EDGES</a> <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> is due to</p>
@@ -960,16 +969,16 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2018 10:07:15
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.206).
-  See <a href="https://ncatlab.org/nlab/author/Urs Schreiber" style="color: #005c19">Author — Urs Schreiber</a> for an overview of the nLab pages to which Urs Schreiber has contributed.
+  <p>
+  Last revised on July 10, 2018 at 04:03:24.
+  See the <a href="https://ncatlab.org/nlab/history/cosmic microwave background radiation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/cosmic+microwave+background+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmic+microwave+background+radiation/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cosmic+microwave+background+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmic+microwave+background+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/cosmic microwave background radiation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/cosmic+microwave+background+radiation" accesskey="p" id="view_print" rel="nofollow">Print</a>
