--- a/pages/19514.html
+++ b/pages/19514.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -311,17 +311,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+group'>anti de Sitter group</a> <math class='maruku-mathml' display='inline' id='mathml_248e55b079dd1b2b3fa571f9ebe39da18fc62452_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mi>D</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(2,D-1)</annotation></semantics></math> admits “ultra-short” <a class='existingWikiWord' href='/nlab/show/unitary+representation'>unitary representations</a> that admit no <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>-limit (along the <a class='existingWikiWord' href='/nlab/show/Lie+algebra+contraction'>Lie algebra contraction</a>). For <math class='maruku-mathml' display='inline' id='mathml_248e55b079dd1b2b3fa571f9ebe39da18fc62452_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D= 4</annotation></semantics></math> these were first discussed by <a href='#Dirac63'>Dirac 63</a> and named <em>singletons</em>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+group'>anti de Sitter group</a> <math class='maruku-mathml' display='inline' id='mathml_d6a0f09709d5cfd61c8d72f5b14ce9f42ff69125_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>2</mn><mo>,</mo><mi>D</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(2,D-1)</annotation></semantics></math> admits “ultra-short” <a class='existingWikiWord' href='/nlab/show/unitary+representation'>unitary representations</a> that admit no <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>-limit (along the <a class='existingWikiWord' href='/nlab/show/Lie+algebra+contraction'>Lie algebra contraction</a>). For <math class='maruku-mathml' display='inline' id='mathml_d6a0f09709d5cfd61c8d72f5b14ce9f42ff69125_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D= 4</annotation></semantics></math> these were first discussed by <a href='#Dirac63'>Dirac 63</a> and named <em>singletons</em>.</p>
 
-<p>In (<a href='#Fronsdal81'>Fronsdal 81</a>, <a href='#FlatoFronsdal81'>Flato-Fronsdal 81</a>) it was highlighted that these representations may naturally be understood as associated with the <span class='newWikiWord'>asymptotic boundary<a href='/nlab/new/asymptotic+boundary'>?</a></span> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a>.</p>
+<p>In (<a href='#Fronsdal81'>Fronsdal 81</a>, <a href='#FlatoFronsdal81'>Flato-Fronsdal 81</a>) it was observed that these representations may naturally be understood as associated with the <span class='newWikiWord'>asymptotic boundary<a href='/nlab/new/asymptotic+boundary'>?</a></span> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a>.</p>
 
 <p>Analogous statements hold true for the <a class='existingWikiWord' href='/nlab/show/superconformal+super+Lie+group'>super anti de Sitter group</a> (e.g. <a href='#Gunyadin89'>Gunyadin 89</a>)</p>
 
-<p>Based on this observation, it was conjectured in <a href='#Duff88'>Duff 88, p. 29-30</a> that the singleton representation of <math class='maruku-mathml' display='inline' id='mathml_248e55b079dd1b2b3fa571f9ebe39da18fc62452_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>3</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(3,2)</annotation></semantics></math> is realized by the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content of the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a>-theory of a <a class='existingWikiWord' href='/nlab/show/Green-Schwarz+action+functional'>fundamental</a> <a class='existingWikiWord' href='/nlab/show/M2-brane'>M2-brane</a> stretched along the <span class='newWikiWord'>asymptotic boundary<a href='/nlab/new/asymptotic+boundary'>?</a></span> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> factor <math class='maruku-mathml' display='inline' id='mathml_248e55b079dd1b2b3fa571f9ebe39da18fc62452_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_{4}</annotation></semantics></math> in a <a class='existingWikiWord' href='/nlab/show/Freund-Rubin+compactification'>Freund-Rubin compactification</a> of <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a>. </p>
+<p>Based on this observation, it was conjectured in <a href='#Duff88'>Duff 88, p. 29-30</a> that the singleton representation of <math class='maruku-mathml' display='inline' id='mathml_d6a0f09709d5cfd61c8d72f5b14ce9f42ff69125_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>SO</mi><mo stretchy='false'>(</mo><mn>3</mn><mo>,</mo><mn>2</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>SO(3,2)</annotation></semantics></math> is realized by the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> content of the <a class='existingWikiWord' href='/nlab/show/worldvolume'>worldvolume</a>-theory of a <a class='existingWikiWord' href='/nlab/show/Green-Schwarz+action+functional'>fundamental</a> <a class='existingWikiWord' href='/nlab/show/M2-brane'>M2-brane</a> stretched along the <span class='newWikiWord'>asymptotic boundary<a href='/nlab/new/asymptotic+boundary'>?</a></span> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> factor <math class='maruku-mathml' display='inline' id='mathml_d6a0f09709d5cfd61c8d72f5b14ce9f42ff69125_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub></mrow><annotation encoding='application/x-tex'>AdS_{4}</annotation></semantics></math> in a <a class='existingWikiWord' href='/nlab/show/Freund-Rubin+compactification'>Freund-Rubin compactification</a> of <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a>. </p>
 
 <p> Curiously, also the idea of a fundamental <a class='existingWikiWord' href='/nlab/show/supermembrane'>membrane</a> is due to <a class='existingWikiWord' href='/nlab/show/Paul+Dirac'>Paul Dirac</a> (<a href='supermembrane#Dirac62'>Dirac 62</a>)</p>
 
-<p>This conjecture was shown to be true in … and is a pre-cursor of what is now known as the <em><a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS-CFT correspondence</a></em> (see <a href='#Duff98'>Duff 98</a> for review). .</p>
+<p>This conjecture was shown to be true in … and is a pre-cursor of what is now known as the <em><a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS-CFT correspondence</a></em> (see <a href='#Duff98'>Duff 98</a> for review). See also at <em><a href='Green-Schwarz+action+functional#AsPartOfTheAdSCFTCorrespodence'>super p-brane – As part of the AdS-CFT correspondence</a></em>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -350,6 +350,14 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Eric+Bergshoeff'>Eric Bergshoeff</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Mike Duff</a>, <a class='existingWikiWord' href='/nlab/show/Christopher+Pope'>Christopher Pope</a> and <a class='existingWikiWord' href='/nlab/show/Ergin+Sezgin'>Ergin Sezgin</a>, <em>Supersymmetric supermembrane vacua and singletons</em>, Phys. Lett. B199, 69 (1988)</p>
 </li>
 
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gianguido+Dall%27Agata'>Gianguido Dall&#39;Agata</a>, Davide Fabbri, Christophe Fraser, <a class='existingWikiWord' href='/nlab/show/Pietro+Fr%C3%A9'>Pietro Fré</a>, Piet Termonia, Mario Trigiante, <em>The <math class='maruku-mathml' display='inline' id='mathml_d6a0f09709d5cfd61c8d72f5b14ce9f42ff69125_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Osp</mi><mo stretchy='false'>(</mo><mn>8</mn><mo stretchy='false'>|</mo><mn>4</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Osp(8|4)</annotation></semantics></math> singleton action from the supermembrane</em>, Nucl.Phys.B542:157-194, 1999 (<a href='http://arxiv.org/abs/hep-th/9807115'>arXiv:hep-th/9807115</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paolo+Pasti'>Paolo Pasti</a>, <a class='existingWikiWord' href='/nlab/show/Dmitri+Sorokin'>Dmitri Sorokin</a>, Mario Tonin, <em>Branes in Super-AdS Backgrounds and Superconformal Theories</em> (<a href='http://arxiv.org/abs/hep-th/9912076'>arXiv:hep-th/9912076</a>)</p>
+</li>
+
 <li id='Duff98'>
 <p><a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Mike Duff</a>, <em>Anti-de Sitter space, branes, singletons, superconformal field theories and all that</em>, Int.J.Mod.Phys.A14:815-844, 1999 (<a href='https://arxiv.org/abs/hep-th/9808100'>arXiv:hep-th/9808100</a>)</p>
 </li>
@@ -361,7 +369,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on July 10, 2018 at 04:57:01.
+  Created on July 10, 2018 at 05:05:08.
   See the <a href="https://ncatlab.org/nlab/history/singleton representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
