--- a/pages/19515.html
+++ b/pages/19515.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Murat Günaydin in nLab
+      Christian Fronsdal in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Murat Günaydin
+      Christian Fronsdal
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8717/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -307,27 +307,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>
-</p>
-
-<ul>
-<li><a href='http://www.phys.psu.edu/people/gxt'>webpage</a></li>
+    <ul>
+<li><a href='http://www.pa.ucla.edu/directory/christian-fronsdal'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8c429aecd7b31ad14e86c02c2b88a2e6bdc997e1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d13a8ac0788abbac3e44443342e57c882322fcdb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>4d supergravity</a>, <a class='existingWikiWord' href='/nlab/show/magic+supergravity'>magic supergravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/4d+supergravity+Lie+2-algebra'>4d supergravity Lie 2-algebra</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/singleton+representation'>singleton representation</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/singleton+representation'>singleton representation</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -335,22 +322,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 10, 2018 at 07:28:53.
-  See the <a href="https://ncatlab.org/nlab/history/Murat Günaydin" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 10, 2018 at 07:27:48.
+  See the <a href="https://ncatlab.org/nlab/history/Christian Fronsdal" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Murat+G%C3%BCnaydin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Murat+G%C3%BCnaydin/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Murat+G%C3%BCnaydin" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Murat+G%C3%BCnaydin" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Murat Günaydin/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Christian+Fronsdal" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Christian Fronsdal/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Murat+G%C3%BCnaydin" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Christian+Fronsdal" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Murat+G%C3%BCnaydin" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Christian+Fronsdal" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Murat+G%C3%BCnaydin" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Christian+Fronsdal" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
