--- a/pages/3412.html
+++ b/pages/3412.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8718/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8718/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -315,13 +315,13 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie/vogt_rainer_nachruf.html'>obituary</a> at his former</p>
+<p><a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie/vogt_rainer_nachruf.html'>obituary</a> at his former <a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie.html'>research group</a> in Osnabrück.</p>
+</li>
+
+<li id='VogtMemory'>
+<p>Rainer Vogt, <em>My time as Mike Boardman’s student and our work on infinite loop spaces</em> (<a class='existingWikiWord' href='/nlab/files/VogtMemory.pdf' title='pdf'>pdf</a>)</p>
 </li>
 </ul>
-
-<p><a href='https://www.mathematik.uni-osnabrueck.de/forschung/ag_topologie_und_geometrie.html'>research group</a> in Osnabrück.</p>
-
-<p><a class='existingWikiWord' href='/nlab/files/VogtMemory.pdf' title='pdf'>pdf</a></p>
 
 <p>He received his Ph.D. from the University of Warwick and his thesis advisor was <a class='existingWikiWord' href='/nlab/show/Michael+Boardman'>Michael Boardman</a>. He was a a full professor at Osnabrück University in Germany.</p>
 
@@ -372,7 +372,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 11, 2018 at 02:58:50.
+  Last revised on July 11, 2018 at 03:06:22.
   See the <a href="https://ncatlab.org/nlab/history/Rainer Vogt" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
