--- a/pages/19522.html
+++ b/pages/19522.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      double functor in nLab
+      double category of squares in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      double functor
+      double category of squares
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8728/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8729/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -510,59 +510,65 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definitions_2'>Definitions</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>double functor</strong> is a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> between <a class='existingWikiWord' href='/nlab/show/double+category'>double categories</a>. Since if <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> are double categories, the only possible sort of functor <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C\to D</annotation></semantics></math> is a double functor, it is unambiguous to leave off the adjective and simply speak about “functors” between double categories.</p>
+<p>Given a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>, it induces a <a class='existingWikiWord' href='/nlab/show/double+category'>double category</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sq</mi><mo stretchy='false'>(</mo><mi>𝒞</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sq(\mathcal{C})</annotation></semantics></math> whose</p>
 
-<p>However, just like <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functors</a>, double functors do come in different flavors: strict, pseudo/strong, lax, and oplax. Moreover, these various flavors can be chosen more or less independently in the two directions of a double category (vertical and horizontal). Thus we can have functors which are strict in both directions, strict in one direction and pseudo in the other, pseudo in both directions, strict in one direction and lax in the other, and so on. (It’s not clear whether lax+lax or lax+oplax are sensible, though.)</p>
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/object'>objects</a> are the objects of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
+</li>
 
-<h2 id='definitions_2'>Definitions</h2>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/horizontal+morphism'>horizontal morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
+</li>
 
-<p>If <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> are strict double categories, i.e. <a class='existingWikiWord' href='/nlab/show/internal+category'>internal categories</a> in <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math>, then a strict double functor <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo>→</mo><mi>D</mi></mrow><annotation encoding='application/x-tex'>C\to D</annotation></semantics></math> is simply an internal functor in <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math>. Thus, it takes objects, arrows of both sorts, and squares in <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> to the same structures in <math class='maruku-mathml' display='inline' id='mathml_7cecb1f8ee4d0d7e640b0498f6cac290ccf64e2b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math>, preserving sources and targets and also preserving all identities and composites.</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/horizontal+morphism'>vertical morphisms</a> are also the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math>;</p>
+</li>
 
-<p>…</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> are the <a class='existingWikiWord' href='/nlab/show/2-morphism'>2-morphisms</a> of <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> between the <a class='existingWikiWord' href='/nlab/show/composition'>compositions</a> of the <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphisms</a>.</p>
+</li>
+</ul>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li>The double category <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Sq</mi><mo stretchy='false'>(</mo><mi>Cat</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Sq(Cat)</annotation></semantics></math> of squares in <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> receives a <a class='existingWikiWord' href='/nlab/show/double+functor'>double pseudofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_1e1aa876ca4b4dadc2651aabf09d6e81da9152a8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ho</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ho(-)</annotation></semantics></math> from the <a class='existingWikiWord' href='/nlab/show/double+category+of+model+categories'>double category of model categories</a> (<a href='double+category+of+model+categories#HomotopyDoublePseudofunctor'>this Prop.</a>) which on objects sends a <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> to its <a class='existingWikiWord' href='/nlab/show/homotopy+category+of+a+model+category'>homotopy category of a model category</a>, and which on morphisms sends a left/right <a class='existingWikiWord' href='/nlab/show/Quillen+adjunction'>Quillen functor</a> to its left/right <a class='existingWikiWord' href='/nlab/show/derived+functor'>derived functor</a>.</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
-<p>Double pseudofunctors are discussed in</p>
+<p>The construction goes back to</p>
 
 <ul>
-<li id='Shulman07'><a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Michael Shulman</a>, section 6 of <em>Comparing composites of left and right derived functors</em>, New York Journal of Mathematics 17 (2011), 75-125 (<a href='https://arxiv.org/abs/0706.2868'>arXiv:0706.2868</a>)</li>
+<li id='Ehresmann63'><a class='existingWikiWord' href='/nlab/show/Charles+Ehresmann'>Charles Ehresmann</a>, <em>Catégories structurées</em>, Annales scientifiques de l’École Normale Supérieure. Vol. 80. No. 4. Elsevier, 1963 (<a href='https://eudml.org/doc/urn:eudml:doc:81794'>EUDML:81794</a>)</li>
 </ul>
 
 <p>
- 
-</p>
-
-<p>
- 
- 
- 
- 
- 
- 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 12, 2018 at 05:45:32.
-  See the <a href="https://ncatlab.org/nlab/history/double functor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 12, 2018 at 05:55:51.
+  See the <a href="https://ncatlab.org/nlab/history/double category of squares" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/double+functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+functor/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/double+functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/double functor/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/double+category+of+squares" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/double category of squares/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/double+functor" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/double+category+of+squares" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/double+functor" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/double+category+of+squares" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/double+functor" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/double+category+of+squares" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
