--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,35 +305,30 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ecb6820060d3a18e96dead58b67066734d251511_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>sSet</mi> <mi>Qu</mi></msub></mtd> <mtd><mover><mo>⟶</mo><mi>const</mi></mover></mtd> <mtd><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mi>proj</mi></msub></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>const</mi></mpadded></msup><mo maxsize='1.2em' minsize='1.2em'>↓</mo></mtd> <mtd><msub><mo>⇙</mo> <mpadded width='0'><mi>id</mi></mpadded></msub></mtd> <mtd><mo maxsize='1.2em' minsize='1.2em'>↓</mo><msup><mrow></mrow> <mpadded width='0'><mi>id</mi></mpadded></msup></mtd></mtr> <mtr><mtd><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mi>inj</mi></msub></mtd> <mtd><munder><mo>⟶</mo><mi>id</mi></munder></mtd> <mtd><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mi>inj</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \array{
-    sSet_{Qu}
-      &amp;\overset{const}{\longrightarrow}&amp;
-    [\mathcal{C}^{op}, sSet_{Qu}]_{proj}
-    \\
-    {}^{\mathllap{const}}
-    \big\downarrow
-      &amp;\swArrow_{\mathrlap{id}}&amp; 
-    \big\downarrow{}^{ \mathrlap{ id } }
-    \\
-    [\mathcal{C}^{op}, sSet_{Qu}]_{inj}
-    &amp;\underset{id}{\longrightarrow}&amp; 
-    [\mathcal{C}^{op}, sSet_{Qu}]_{inj}
-  }
-
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8946af9dc599e46a9b9e96a4bdb95baea24c2221_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>𝒞</mi></mtd> <mtd><mover><mo>⟶</mo><mrow><msub><mi>R</mi> <mn>1</mn></msub></mrow></mover></mtd> <mtd><mi>𝒟</mi></mtd></mtr> <mtr><mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><msub><mi>L</mi> <mn>1</mn></msub></mrow></mpadded></msup><mo stretchy='false'>↓</mo></mtd> <mtd><msub><mo>⇙</mo> <mpadded width='0'><mi>ϕ</mi></mpadded></msub></mtd> <mtd><mo>⇓</mo><msup><mrow></mrow> <mpadded width='0'><mrow><msub><mi>L</mi> <mn>2</mn></msub></mrow></mpadded></msup></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+     \array{
+       \mathcal{C}
+       &amp;\overset{R_1}{\longrightarrow}&amp;
+       \mathcal{D}
+       \\
+       {}^{\mathllap{L_1}}\downarrow 
+         &amp;\swArrow_{\mathrlap{\phi}}&amp; 
+       \Downarrow{}^{\mathrlap{L_2}}
+     }
+   
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 12, 2018 at 04:47:27.
+  Last revised on July 12, 2018 at 05:38:35.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1556" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1556 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1557" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1557 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
